# SDIR

./: .gitignore  Dockerfile  README.md
ctrl/: CMakeLists.txt  build.sh
ctrl/src/: main.cpp
ctrl/src/ctrl/: CMakeLists.txt  sdir_ctrl.cpp  sdir_ctrl.h
ctrl/src/ctrl/com/: CMakeLists.txt  json_handler.cpp  json_handler.h  jsoncpp.cpp  opmode_enum.h
ctrl/src/ctrl/com/remoteApi/: CMakeLists.txt
ctrl/src/ctrl/kinematics/direct/: CMakeLists.txt  fw_kinematics.cpp  fw_kinematics.h
ctrl/src/ctrl/kinematics/inverse/: CMakeLists.txt  inverse_kinematics.cpp  inverse_kinematics.h
ctrl/src/ctrl/pathplanner/lin/: CMakeLists.txt  lin.cpp  lin.h
ctrl/src/ctrl/pathplanner/ptp/: CMakeLists.txt  ptp.cpp  ptp.h
ctrl/src/ctrl/postypes/: CMakeLists.txt  Configuration.cpp  Configuration.h  SixDPos.cpp  SixDPos.h  TMatrix.cpp  TMatrix.h  Trajectory.cpp  Trajectory.h
sim/: Kuka KR120 2700-2 SDIR.ttt
